--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=Example
 author=Nobody
 description=An example greeter plugin
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.github.dappermickie.custom.friendlist.CustomFriendListPlugin
