--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
+displayName=Custom Friendlist
+author=DapperMickie
+support=https://github.com/DapperMickie/custom-friendlist
+description=A combination of entity hider and player indicators plugins using a list of usernames
+tags=entity, hider, player, indicator, indicators
 plugins=com.github.dappermickie.custom.friendlist.CustomFriendListPlugin
