Updated plugin name
Removed customizability for list of users
Added check to make sure the account using the plugin is part of the hardcoded list
Finalized list of ppl

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,4 +1,4 @@
-displayName=Custom Friendlist
+displayName=Odablock DMM Finale
 author=DapperMickie
 support=https://github.com/DapperMickie/custom-friendlist
 description=A combination of entity hider and player indicators plugins using a list of usernames
